# python-base

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
src/base/: pytest.py
tests/base/: test_pytest.py
