[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["safecorners <safecorners.mobile@gmail.com>"]
readme = "README.md"
packages = [{include = "base", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
