[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["safecorners <safecorners.mobile@gmail.com>"]
readme = "README.md"
packages = [{include = "base", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"
coverage = "^7.6.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q",
    "-vv"
]
pythonpath = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_format="%(asctime)s %(levelname)s %(message)s"
log_date_format="%Y-%m-%d %H:%M:%S"

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__"]
count = true
extend-ignore = ["E203", "E701"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
